[workspace]
resolver = "3"
members = ["api", "usecase", "infra", "domain"]

[workspace.dependencies]
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

uint = "*"

uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = { version = "1" }
thiserror = "2"

hex = "0"

http = "1"

bytes = "1"

bon = "3"

async-trait = "0"

alloy = "2"
