[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
infra.path = "../infra/"
usecase.path = "../usecase/"
domain.path = "../domain/"

clap = { version = "4", features = ["derive"] }
config = "0"
reqwest = "0"


utoipa = { version = "5", features = ["axum_extras"] }
utoipa-scalar = { version = "0.3", features = ["axum"] }

axum = "0"
tower = { version = "0" }
tower-http = { version = "0", features = ["trace"] }

tracing-subscriber = { version = "0", features = ["env-filter", "json"] }

opentelemetry = { version = "0.29", features = ["trace"] }
opentelemetry_sdk = { version = "0.29", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.29", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.30"

hex.workspace = true
tracing.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
tikv-jemallocator = "0.6"
