[package]
name = "usecase"
version = "0.1.0"
edition = "2024"

[dependencies]
domain.path = "../domain"

chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
tracing.workspace = true
hex.workspace = true
futures = "0.3"
moka = { version = "0.12", features = ["future"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
